--- a/app/views/registrar/invoices/partials/_items.html.erb
+++ b/app/views/registrar/invoices/partials/_items.html.erb
@@ -24,7 +24,7 @@
             <% end %>
         </tbody>
 
-        <tfoot>
+        <tfoot class="totals">
             <tr>
                 <th colspan="3"></th>
                 <th>
@@ -35,11 +35,13 @@
                 </td>
             </tr>
 
-            <tr>
-                <th class="no-border" colspan="3"></th>
-                <th><%= "VAT #{number_to_percentage(@invoice.vat_rate, precision: 1)}" %></th>
-                <td><%= number_to_currency @invoice.vat_amount %></td>
-            </tr>
+            <% unless @invoice.vat_rate.no_vat? %>
+                <tr>
+                    <th class="no-border" colspan="3"></th>
+                    <th><%= "VAT #{@invoice.vat_rate.format}" %></th>
+                    <td><%= number_to_currency @invoice.vat_amount %></td>
+                </tr>
+            <% end %>
 
             <tr>
                 <th class="no-border" colspan="3"></th>
