--- a/app/views/registrar/invoices/partials/_details.haml
+++ b/app/views/registrar/invoices/partials/_details.haml
@@ -2,7 +2,7 @@
 %hr
 %dl.dl-horizontal
   %dt= t(:issue_date)
-  %dd= l(@invoice.created_at, format: :date_long)
+  %dd= l @invoice.issue_date
 
   - if @invoice.cancelled?
     %dt= t(:cancel_date)
