--- a/app/views/registrar/settings/auto_account_top_up/_form.html.erb
+++ b/app/views/registrar/settings/auto_account_top_up/_form.html.erb
@@ -1,23 +1,23 @@
-<%= form_for @registrar, url: registrar_settings_auto_invoice_path, method: :patch, html: { class: 'form-horizontal' } do |f| %>
+<%= form_for @registrar, url: registrar_settings_auto_account_top_up_path, method: :patch, html: { class: 'form-horizontal' } do |f| %>
     <%= render 'form_errors', target: @registrar %>
 
     <div class="form-group">
         <div class="col-sm-offset-3 col-sm-3">
             <div class="checkbox">
                 <label>
-                    <%= f.check_box :auto_invoice_activated %>
-                    <%= Registrar.human_attribute_name :auto_invoice_activated %>
+                    <%= f.check_box :auto_account_top_up_activated %>
+                    <%= Registrar.human_attribute_name :auto_account_top_up_activated %>
                 </label>
             </div>
         </div>
     </div>
 
     <div class="form-group">
-        <%= f.label :auto_invoice_low_balance_threshold, class: 'col-sm-3 control-label' %>
+        <%= f.label :auto_account_top_up_low_balance_threshold, class: 'col-sm-3 control-label' %>
 
         <div class="col-sm-2">
             <div class="input-group">
-                <%= f.money_field :auto_invoice_low_balance_threshold, required: true,
+                <%= f.money_field :auto_account_top_up_low_balance_threshold, required: true,
                                   autofocus: true,
                                   class: 'form-control' %>
                 <div class="input-group-addon"><%= Money::default_currency.symbol %></div>
@@ -26,21 +26,21 @@
     </div>
 
     <div class="form-group">
-        <%= f.label :auto_invoice_top_up_amount, class: 'col-sm-3 control-label' %>
+        <%= f.label :auto_account_top_up_amount, class: 'col-sm-3 control-label' %>
 
         <div class="col-sm-2">
             <div class="input-group">
-                <%= f.money_field :auto_invoice_top_up_amount, class: 'form-control', required: true %>
+                <%= f.money_field :auto_account_top_up_amount, class: 'form-control', required: true %>
                 <div class="input-group-addon"><%= Money::default_currency.symbol %></div>
             </div>
         </div>
     </div>
 
     <div class="form-group">
-        <%= f.label :auto_invoice_iban, class: 'col-sm-3 control-label' %>
+        <%= f.label :auto_account_top_up_iban, class: 'col-sm-3 control-label' %>
 
         <div class="col-sm-4">
-            <%= f.text_field :auto_invoice_iban, class: 'form-control', required: true %>
+            <%= f.text_field :auto_account_top_up_iban, class: 'form-control', required: true %>
             <span class="help-block"><%= t '.iban_hint' %></span>
         </div>
     </div>
